fixed overflowing height on mobile devices | fixes #15

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,7 @@ body {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar-track {
